src-ken&y/objects/Accounting_Rule__c.object
<CustomObject>
    <customHelpPage>HelpAccountingRules</customHelpPage>
    <description>The rules based engine that generates the accounting entries for all Financial Companies from Operating Companies</description>
    <fields>
        <fullName>Accounting_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Standard</label>
        <referenceTo>Accounting_Standard__c</referenceTo>
        <relationshipLabel>Accounting Rules</relationshipLabel>
        <relationshipName>Accounting_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Spoils</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Reference__c</fullName>
        <description>Field name of custom amount on lines to use for accounting.  Can be a reference to a related object field.</description>
        <inlineHelpText>Field name of custom amount on lines to use for accounting. This can also be a reference to a related object field.</inlineHelpText>
        <label>Amount Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Ledger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Ledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Rules</relationshipLabel>
        <relationshipName>Accounting_Generator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidation_Ledger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidation Ledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_GL_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use default GL Account. Uncheck if using a reference to a field containing a dynamic GL Account.</description>
        <inlineHelpText>A check mark indicates that the rule uses the default general ledger account. Clear the check box if you are using a reference to a field containing a dynamic general ledger account.</inlineHelpText>
        <label>Default GL Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Intercompany__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Intercompany</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>The date until which the Accounting Rule is effective</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>The Date from which accounting rule is effctive</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Sign__c</fullName>
        <label>Expected Sign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                    <default>true</default>
                    <label>Positive</label>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FX_Date_Path__c</fullName>
        <inlineHelpText>The path within the schema to the upstream source document. The source document captures the date of the original transaction.</inlineHelpText>
        <label>FX Date Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX_Flow__c</fullName>
        <inlineHelpText>The flow of money for financial exchange consideration. Can be either &quot;In&quot; or &quot;Out&quot;. If &quot;Out&quot;, monetary non-cash accounts could be exposed to financial exchange fluctuations.</inlineHelpText>
        <label>FX Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Account_Identifier__c</fullName>
        <label>GL Account Identifier</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Reference_Value__c</fullName>
        <description>Field name of a dynamic GL Account value.  Can be a reference to a related object field.</description>
        <inlineHelpText>Field name of a dynamic general ledger account value. This can also be a reference to a related object field.</inlineHelpText>
        <label>GL Account Reference Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Account Segment Default.</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL Account used in the Accounting rule is Inactive.  Please Select a Active GL Account</errorMessage>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Rules</relationshipLabel>
        <relationshipName>Accounting_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany_Reference_Value__c</fullName>
        <label>Intercompany Reference Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Rules (Interco)</relationshipLabel>
        <relationshipName>Interco_Accounting_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Select the line type for this accounting rule</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decrease</fullName>
                </value>
                <value>
                    <fullName>Deduction Debit</fullName>
                </value>
                <value>
                    <fullName>Distribution Sample</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Labor Cost</fullName>
                </value>
                <value>
                    <fullName>Outside Processing Cost</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Overhead Cost</fullName>
                </value>
                <value>
                    <fullName>Material Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The name of the object that the source document resides in.</description>
        <inlineHelpText>The name of the object in which the source document resides.</inlineHelpText>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Invoice</fullName>
                </value>
                <value>
                    <fullName>Customer Receipt</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Adjustment</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Depreciation</fullName>
                </value>
                <value>
                    <fullName>Inventory Change</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Journal Entry</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Receiving Document</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Supplier Invoice</fullName>
                </value>
                <value>
                    <fullName>Supplier Payment</fullName>
                </value>
                <value>
                    <fullName>Bank Transaction Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Raise_Exceptions_for_Blank_Amounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Raise Exceptions for Blank Amounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>Investee</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Payee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <description>Rule Type: Credit (CR), Debit (DR), or NA</description>
        <inlineHelpText>Select either Credit (CR), Debit (DR), or NA (no type).</inlineHelpText>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statutory_Ledger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Statutory Ledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubTransaction_Type__c</fullName>
        <description>Select the sub transaction type for this accounting rule</description>
        <label>SubTransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transaction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Activate Proposed Costs</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Adjustment Decrease</fullName>
                </value>
                <value>
                    <fullName>Adjustment Increase</fullName>
                </value>
                <value>
                    <fullName>Affiliate Order</fullName>
                </value>
                <value>
                    <fullName>Bank Adjustment</fullName>
                </value>
                <value>
                    <fullName>Bank Interest Income</fullName>
                </value>
                <value>
                    <fullName>Bank Fees</fullName>
                </value>
                <value>
                    <fullName>Billback Allowance</fullName>
                </value>
                <value>
                    <fullName>By-Product</fullName>
                </value>
                <value>
                    <fullName>Capitalize</fullName>
                </value>
                <value>
                    <fullName>Claim Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Applied</fullName>
                </value>
                <value>
                    <fullName>Credit Applied - Claim</fullName>
                </value>
                <value>
                    <fullName>Cycle Count</fullName>
                </value>
                <value>
                    <fullName>Debit Applied</fullName>
                </value>
                <value>
                    <fullName>Debit Applied - Claim</fullName>
                </value>
                <value>
                    <fullName>Deduction</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Earned Terms Discount</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>General Deduction</fullName>
                </value>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Intercompany Netting</fullName>
                </value>
                <value>
                    <fullName>Intercompany Payment</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice Deduction</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiary_Ledger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subsidiary Ledger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Zero_Amount_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Zero-Amount Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <description>Select the transaction type for this accounting rule</description>
        <label>Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Object__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual - Manual</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Advanced Shipment Notice</fullName>
                </value>
                <value>
                    <fullName>Chargeback</fullName>
                </value>
                <value>
                    <fullName>Claim Settlement</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Customer Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Customer Invoice</fullName>
                </value>
                <value>
                    <fullName>Cycle Count</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Adjustment</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Depreciation</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset to Inventory</fullName>
                </value>
                <value>
                    <fullName>Inventory to Fixed Asset</fullName>
                </value>
                <value>
                    <fullName>Intercompany Investment</fullName>
                </value>
                <value>
                    <fullName>Intercompany Payment</fullName>
                </value>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
                <value>
                    <fullName>In-Transit Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Inventory Change</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Invoice Credit</fullName>
                </value>
                <value>
                    <fullName>Logical</fullName>
                </value>
                <value>
                    <fullName>Logical Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Logical Sales Order Shipment</fullName>
                </value>
                <value>
                    <fullName>Logical RMA Receipt</fullName>
                </value>
                <value>
                    <fullName>Logical Purchase Order Return</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Credit</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Receipt</fullName>
                </value>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>

                <value>
                    <fullName>Void - In-Transit Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Year End</fullName>
                </value>
                <value>
                    <fullName>Year End Adjustment</fullName>
                </value>
                <value>
                    <fullName>Work Order Kit</fullName>
                </value>
                <value>
                    <fullName>Work Order DeKit</fullName>
                </value>
                <value>
                    <fullName>Work Order Complete</fullName>
                </value>
                <value>
                    <fullName>Work Order Uncomplete</fullName>
                </value>
                <value>
                    <fullName>Work Order Scrap Components</fullName>
                </value>
                <value>
                    <fullName>Void Purchase Order Return</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Activate Proposed Costs</fullName>
                </value>
                <value>
                    <fullName>Void Transfer Order Pick</fullName>
                </value>
                <value>
                    <fullName>RMA Scrap</fullName>
                </value>
                <value>
                    <fullName>RMA Receipt</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Bank Transaction</fullName>
                </value>
                <value>
                    <fullName>Intercompany Cross Charge</fullName>
                </value>
                <value>
                    <fullName>RMA Receipt For Repair</fullName>
                </value>
                <value>
                    <fullName>PL RFX</fullName>
                </value>
                <value>
                    <fullName>Rental Exchange</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>UFX</fullName>
                </value>
                <value>
                    <fullName>Allowance Accrual</fullName>
                </value>
                <value>
                    <fullName>Sales Order Undo Pick</fullName>
                </value>
                <value>
                     <fullName>Undo Transfer of Ownership</fullName>
                </value>
                <value>
                    <fullName>Void - In-Transit</fullName>
                </value>
                <value>
                    <fullName>Sales Order Pick Transfer</fullName>
                </value>
                <value>
                    <fullName>Transfer Order Pick Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Company + Object Name + Transaction + Sub Transaction + Line Type + Rule Type + Amt Override Unique Key</description>
        <inlineHelpText>Generated as follows: Company + Object Name + Transaction + SubTransaction + Line Type + Rule Type + Amt Override.</inlineHelpText>
        <label>Unique Key</label>
        <length>240</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Role__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <columns>Intercompany__c</columns>
        <columns>Intercompany_Reference_Value__c</columns>
        <columns>Company_Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Invoice</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <columns>Company_Ledger__c</columns>
        <columns>Consolidation_Ledger__c</columns>
        <columns>Statutory_Ledger__c</columns>
        <columns>Subsidiary_Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Customer Invoice,Credit Memo</value>
        </filters>
        <label>Invoice</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Receipt</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Purchase Receipt</value>
        </filters>
        <label>Purchase Receipt</label>
    </listViews>
    <listViews>
        <fullName>Receipts</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Customer Receipt</value>
        </filters>
        <label>Customer Receipts</label>
    </listViews>
    <listViews>
        <fullName>Shipment</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Shipment</value>
        </filters>
        <label>Shipment</label>
    </listViews>
    <listViews>
        <fullName>Supplier_Invoice</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Supplier Invoice</value>
        </filters>
        <label>Supplier Invoice</label>
    </listViews>
    <listViews>
        <fullName>Supplier_Payment</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Supplier Payment</value>
        </filters>
        <label>Supplier Payment</label>
    </listViews>
    <listViews>
        <fullName>Work_Order</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Transaction__c</columns>
        <columns>SubTransaction_Type__c</columns>
        <columns>Line_Type__c</columns>
        <columns>Rule_Type__c</columns>
        <columns>Amount_Reference__c</columns>
        <columns>GL_Account__c</columns>
        <columns>Default_GL_Account__c</columns>
        <columns>GL_Account_Reference_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Work Order</value>
        </filters>
        <label>Work Order</label>
    </listViews>
    <nameField>
        <label>Accounting Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Accounting_Standard_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Accounting_Standard__c)</errorConditionFormula>
        <errorMessage>The Accounting Standard can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Ledger_Check</fullName>
        <active>true</active>
        <description>Make sure the company ledger check box is checked for each rule.</description>
        <errorConditionFormula>!Company_Ledger__c</errorConditionFormula>
        <errorMessage>Please check the company ledger check box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_sign_should_always_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL(Expected_Sign__c, &apos;Positive&apos;)</errorConditionFormula>
        <errorMessage>The value in the Expected Sign field must be Positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Raise_Exceptions_JE_check</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Object__c, &apos;Journal Entry&apos;) &amp;&amp; Raise_Exceptions_for_Blank_Amounts__c == True)
            ||
            (Object_Name__c == &apos;Journal_Entry__c&apos; &amp;&amp; Raise_Exceptions_for_Blank_Amounts__c == True)</errorConditionFormula>
        <errorDisplayField>Raise_Exceptions_for_Blank_Amounts__c</errorDisplayField>
        <errorMessage>You must not select the Raise Exceptions for Blank Amounts checkbox when the Object field is Journal Entry. .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Supressing_zeros_JE_check</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(Object__c, &apos;Journal Entry&apos;) &amp;&amp; Suppress_Zero_Amount_Lines__c == False)
            ||
            (Object_Name__c == &apos;Journal_Entry__c&apos; &amp;&amp; Suppress_Zero_Amount_Lines__c == False)</errorConditionFormula>
        <errorDisplayField>Suppress_Zero_Amount_Lines__c</errorDisplayField>
        <errorMessage>You must select the Suppress Zero-Amount Lines checkbox when the Object field is Journal Entry.</errorMessage>
    </validationRules>
</CustomObject>